unpackaged/main/default/objects/ffct__MigrationSetProcessLog__c/ffct__MigrationSetProcessLog__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffct__migrationsetonlinehelp</customHelpPage>
    <description>Holds the logs generated during Migration Set Job Processing</description>
    <label>Migration Set Process Log</label>
    <nameField>
        <displayFormat>MPSL-{0000}</displayFormat>
        <label>Migration Set Process Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Set Process Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>