unpackaged/main/default/objects/ffct__MigrationSetProcessLog__c/fields/ffct__LogType__c.field-meta.xml
<CustomField>
    <fullName>ffct__LogType__c</fullName>
    <description>Holds the log level. eg- Abort, Error, Information</description>
    <label>Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abort</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>WARN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>