unpackaged/main/default/objects/ffct__MigrationSetProcessLog__c/fields/ffct__Message__c.field-meta.xml
<CustomField>
    <fullName>ffct__Message__c</fullName>
    <description>Holds the log message.</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>