unpackaged/main/default/objects/ffct__MigrationSetProcessLog__c/fields/ffct__MigrationSet__c.field-meta.xml
<CustomField>
    <fullName>ffct__MigrationSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds Migration Set records associated with the logs.</description>
    <label>Migration Set</label>
    <referenceTo>ffct__MigrationSet__c</referenceTo>
    <relationshipLabel>Migration Set Process Logs</relationshipLabel>
    <relationshipName>MigrationSetProcessLogs</relationshipName>
    <type>Lookup</type>
</CustomField>