unpackaged/main/default/objects/ffct__MigrationSetProcessLog__c/fields/ffct__MigrationSetJob__c.field-meta.xml
<CustomField>
    <fullName>ffct__MigrationSetJob__c</fullName>
    <description>Holds the Migration Set Job on whose processing logs were generated.</description>
    <label>Migration Set Job</label>
    <referenceTo>ffct__MigrationSetJob__c</referenceTo>
    <relationshipLabel>Migration Set Process Logs</relationshipLabel>
    <relationshipName>MigrationSetProcessLogs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>